# automix-ai

./: .gitignore  README.md  pyproject.toml
automix/: __init__.py  analyzer.py  cache.py  cli.py  config.py  exceptions.py  logging_config.py  models.py  scoring.py  soundcloud_downloader.py  visualizer.py
docs/: api.md
specs/: automix-ai.spec.md  dj-mix-point-research.spec.md  pro-dj-mixing.spec.md
tests/: test_automix.py  test_scoring.py  test_sections_and_compat.py
